chore : winner 초기값 설정 시 getFirst() 사용